# MeatboySFML

./: CMakeLists.txt  README.md  main.cpp
Menu/levels/: level1.xml  level2.xml  level3.xml
src/Logic/: AbstractFactory.h  AbstractWindow.h  Camera.cpp  Camera.h  EntityLogic.cpp  EntityLogic.h  Logic_Window.h  Observer.cpp  Observer.h  StopWatch.cpp  StopWatch.h  Subject.h  World.cpp  World.h
src/Representation/: ConcreteFactory.cpp  ConcreteFactory.h  ConcreteWindow.cpp  ConcreteWindow.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Level.cpp  Level.h  Menu.cpp  Menu.h  MenuLevel.cpp  MenuLevel.h  State.h  StateManager.cpp  StateManager.h
